// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoWidth Code Block Select 1`] = `
<div
  className=" css-k377xg-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-ypb917-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1fpxn2j-ValueContainer"
    >
      <div
        className=" css-gn3biy-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        className="css-62g3xt-dummyInput"
        disabled={false}
        id="react-select-5-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-43ykx9-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-1hkylt5-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          height={12}
          width={7}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AutoWidth Select 1`] = `
<div
  className=" css-k377xg-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-g974v8-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-15ikjri-ValueContainer"
    >
      <div
        className=" css-1me8bqy-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        className="css-62g3xt-dummyInput"
        disabled={false}
        id="react-select-3-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-43ykx9-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-unjupu-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <img
          alt=""
          className=" css-vfym8x-StyledDefaultDropdownIcon ewzbsaq0"
          src="test-image-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Code Block Select 1`] = `
<div
  className=" css-2b097c-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-ypb917-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1fpxn2j-ValueContainer"
    >
      <div
        className=" css-gn3biy-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        className="css-62g3xt-dummyInput"
        disabled={false}
        id="react-select-4-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-43ykx9-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-1hkylt5-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          height={12}
          width={7}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Default Select 1`] = `
<div
  className=" css-2b097c-container"
  onKeyDown={[Function]}
>
  <div
    className=" css-g974v8-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-15ikjri-ValueContainer"
    >
      <div
        className=" css-1me8bqy-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        className="css-62g3xt-dummyInput"
        disabled={false}
        id="react-select-2-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        tabIndex="0"
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-43ykx9-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-unjupu-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <img
          alt=""
          className=" css-vfym8x-StyledDefaultDropdownIcon ewzbsaq0"
          src="test-image-stub"
        />
      </div>
    </div>
  </div>
</div>
`;
